add multiple speaker results

--- a/results/.gitattributes
+++ b/results/.gitattributes
@@ -1,1 +1,2 @@
 1.Single-speaker[[:space:]]Task.docx filter=lfs diff=lfs merge=lfs -text
+2.[[:space:]]Multi-speaker[[:space:]]Task.docx filter=lfs diff=lfs merge=lfs -text
